--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,9 +1,9 @@
-name: dartabase_example
+name: stormberry_example
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dev_dependencies:
   build_runner: ^1.12.2
-  dartabase:
+  stormberry:
     path: ../
