--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: stormberry
 description: Access your postgres database effortlessly from dart code.
-version: 0.2.1
+version: 0.2.2
 repository: https://github.com/schultek/stormberry
 issue_tracker: https://github.com/schultek/stormberry/issues
 
@@ -9,6 +9,7 @@ dependencies:
   build: ^2.0.0
   postgres: ^2.3.2
   source_gen: ^1.0.0
+  yaml: ^3.1.0
 
 dev_dependencies:
   lint: ^1.5.3
