--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: stormberry
 description: Access your postgres database effortlessly from dart code.
-version: 0.2.2
+version: 0.2.2+1
 repository: https://github.com/schultek/stormberry
 issue_tracker: https://github.com/schultek/stormberry/issues
 
