--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -16,3 +16,4 @@ linter:
     prefer_final_locals: false
     prefer_final_in_for_each: false
     avoid_print: false
+    require_trailing_commas: false
