--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ issue_tracker: https://github.com/schultek/stormberry/issues
 dependencies:
   analyzer: ^2.4.0
   build: ^2.1.1
+  crypto: ^3.0.1
   postgres: ^2.4.1
   source_gen: ^1.1.1
   yaml: ^3.1.0
