--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   collection: ^1.16.0
   crypto: ^3.0.1
   dart_style: ^2.2.2
+  path: ^1.8.2
   postgres: ^2.4.3
   source_gen: ^1.2.1
   yaml: ^3.1.0
