--- a/test/packages/serialization/pubspec.yaml
+++ b/test/packages/serialization/pubspec.yaml
@@ -1,12 +1,14 @@
-name: multi_schema_test
+name: serialization_test
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   stormberry:
-    path: ../../
+    path: ../../../
+  dart_mappable: 1.2.0
 
 dev_dependencies:
   build_runner: ^2.1.7
+  dart_mappable_builder: 1.2.0
   lints: ^1.0.1
