--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ repository: https://github.com/schultek/stormberry
 issue_tracker: https://github.com/schultek/stormberry/issues
 
 dependencies:
-  analyzer: ^4.7.0
+  analyzer: ">=4.2.0 <5.0.0"
   build: ^2.3.1
   collection: ^1.16.0
   crypto: ^3.0.2
@@ -19,4 +19,4 @@ dev_dependencies:
   test: ^1.21.6
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.16.0 <3.0.0'
