fix migration cli

--- a/build.yaml
+++ b/build.yaml
@@ -15,6 +15,6 @@ builders:
   runner:
     import: "package:stormberry/builder.dart"
     builder_factories: [ "buildRunner" ]
-    build_extensions: { ".dart": [ ".runner.dart" ] }
+    build_extensions: { ".dart": [ ".stormberry.dart" ] }
     auto_apply: dependents
     build_to: cache
