--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
   sdk: '>=2.16.0 <3.0.0'
 
 dependencies:
-  analyzer: ">=4.2.0 <5.0.0"
+  analyzer: ^5.2.0
   args: ^2.3.1
   build: ^2.3.1
   collection: ^1.16.0
