--- a/build.yaml
+++ b/build.yaml
@@ -15,6 +15,19 @@ builders:
   runner:
     import: "package:stormberry/builder.dart"
     builder_factories: [ "buildRunner" ]
-    build_extensions: { ".dart": [ ".stormberry.dart" ] }
+    build_extensions: { ".dart": [ ".schema.json" ] }
     auto_apply: dependents
     build_to: cache
+
+targets:
+  $default:
+    builders:
+      stormberry:
+        generate_for:
+          - test/**/*.dart
+      stormberry|schema:
+        generate_for:
+          - test/**/*.dart
+      stormberry|runner:
+        generate_for:
+          - test/**/*.dart
