--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.2.0
   build_test: ^2.1.5
+  docker_process: ^1.3.1
   lints: ^2.0.0
   test: ^1.21.0
 
