--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,7 +27,7 @@ jobs:
         run: dart format . --set-exit-if-changed --line-length=100
 
       - name: Run Code Gen
-        run: dart run build_runner build
+        run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Lint
         run: dart analyze . --fatal-infos
