--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: stormberry
 description: Access your postgres database effortlessly from dart code.
-version: 0.9.2
+version: 0.10.0
 repository: https://github.com/schultek/stormberry
 issue_tracker: https://github.com/schultek/stormberry/issues
 
@@ -14,12 +14,15 @@ dependencies:
   collection: ^1.16.0
   crypto: ^3.0.2
   dart_style: ^2.2.4
+  file: ^6.1.4
+  glob: ^2.1.1
   path: ^1.8.2
   postgres: ^2.5.1
   source_gen: ^1.2.3
   yaml: ^3.1.1
 
 dev_dependencies:
+  build_resolvers: ^2.1.0
   build_runner: ^2.2.0
   build_test: ^2.1.5
   docker_process: ^1.3.1
