--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,9 +4,11 @@ environment:
   sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
+  dart_mappable: ^2.0.1
   stormberry:
     path: ../
 
 dev_dependencies:
   build_runner: ^2.2.1
+  dart_mappable_builder: ^2.0.0
   lints: ^2.0.0
