--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,3 +30,9 @@ dev_dependencies:
   docker_process: ^1.3.1
   lints: ^2.0.0
   test: ^1.21.0
+
+dependency_overrides:
+  postgres:
+    git:
+      url: https://github.com/isoos/postgresql-dart.git
+
