--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,6 +1,8 @@
 include: package:lints/recommended.yaml
 
 analyzer:
+  errors:
+    deprecated_member_use: ignore
   language:
     strict-casts: true
     strict-inference: false
