--- a/build.yaml
+++ b/build.yaml
@@ -18,7 +18,7 @@ builders:
     builder_factories: [ "buildRunner" ]
     build_extensions: { ".dart": [ ".schema.json" ] }
     auto_apply: dependents
-    build_to: cache
+    build_to: source
 
 targets:
   $default:
