--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -2,12 +2,12 @@ name: stormberry_example
 publish_to: none
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ^3.7.0
 
 dependencies:
   stormberry:
     path: ../
 
 dev_dependencies:
-  build_runner: ^2.4.8
-  lints: ^3.0.0
+  build_runner: ^2.6.0
+  lints: ^5.0.0
