--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,12 @@ funding:
   - https://github.com/sponsors/schultek
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ^3.7.0
 
 dependencies:
-  analyzer: ^7.0.0
+  analyzer: ^8.1.0
   args: ^2.3.1
-  build: ^2.3.1
+  build: ^4.0.0
   collection: ^1.16.0
   crypto: ^3.0.2
   dart_style: ^3.0.1
@@ -20,13 +20,13 @@ dependencies:
   glob: ^2.1.1
   path: ^1.8.2
   postgres: ^3.4.5
-  source_gen: ^2.0.0
+  source_gen: ^4.0.0
   yaml: ^3.1.1
 
 dev_dependencies:
-  build_resolvers: ^2.1.0
-  build_runner: ^2.2.0
-  build_test: ^2.1.5
+  build_resolvers: ^3.0.0
+  build_runner: ^2.6.0
+  build_test: ^3.3.0
   docker_process: ^1.3.1
-  lints: ^3.0.0
-  test: ^1.21.0
+  lints: ^5.0.0
+  test: ^1.26.0
