--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -13,3 +13,6 @@ linter:
     sort_pub_dependencies: true
     prefer_relative_imports: true
     prefer_single_quotes: true
+
+formatter:
+  page_width: 100
